--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "autoprefixer": "^10.4.14",
     "flowbite": "^2.2.0",
     "flowbite-svelte": "^0.44.20",
+    "flowbite-svelte-icons": "^0.4.5",
     "postcss": "^8.4.24",
     "postcss-load-config": "^4.0.1",
     "svelte": "^4.2.7",
